--- a/ComputerInfoAgent.Configuator/App.xaml
+++ b/ComputerInfoAgent.Configuator/App.xaml
@@ -1,9 +1,26 @@
 ﻿<Application x:Class="ComputerInfoAgent.Configuator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewModel="clr-namespace:ComputerInfoAgent.Configuator.MVVM.ViewModel"
+             xmlns:view="clr-namespace:ComputerInfoAgent.Configuator.MVVM.View"
              xmlns:local="clr-namespace:ComputerInfoAgent.Configuator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Theme/TextBoxTheme.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:TestViewModel}">
+                <view:TestView/>
+            </DataTemplate>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
